[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
base64 = "0.20.0"
lazy_static = "1.4"
aes = "0.8"
rand = "0.8.5"
rand_mt = "4.2"
num = { version = "0.4.0", features = ["rand"] }
sha1_smol = "1.0.0"
num-primes = "0.3.0"
sha2 = "0.10.6"
hmac = "0.12.1"
